<resources>
    <string name="app_name">Triangle List</string>
    <string name="action_settings">設定</string>
    <string name="action_new">新規作成</string>
    <string name="action_save_csv">CSVを保存</string>
    <string name="action_load_csv">CSVを読込</string>
    <string name="action_save_dxf">DXF出力</string>
    <string name="action_save_sfc" translatable="false">SFC出力</string>
    <string name="action_save_pdf">PDF出力</string>
    <string name="action_send_mail">メールを送信</string>
    <string name="action_usage" translatable="false">取扱説明書</string>
    <string name="action_rate_app">アプリを評価する</string>
    <string name="action_contact">お問い合わせ</string>

    <string name="tenkai_title">面 積 展 開 図</string>
    <string name="tenkai_koujimei">工 事 名</string>
    <string name="tenkai_zumenmei">図 面 名</string>
    <string name="tenkai_rosenmei">路 線 名</string>
    <string name="tenkai_syukusyaku">縮    尺</string>
    <string name="tenkai_zuban">図面番号</string>
    <string name="tenkai_sakuseibi">作 成 日</string>

    <string name="tenkai_nengappi">    年  月  日</string>
    <string name="tenkai_sekousya">施 工 者</string>
    <string name="menseki">面積</string>
    <string name="menseki_title">面 積 計 算 書</string>
    <string name="menseki_koujimei">工事名：</string>
    <string name="menseki_syoukei"> 小計</string>
    <string name="menseki_goukei">合計</string>
    <string name="editor_name" translatable="false">名称</string>
    <string name="editor_sokuten" translatable="false">測点</string>
    <string name="editor_lA" translatable="false">辺A</string>
    <string name="editor_lB" translatable="false">辺B</string>
    <string name="editor_lC" translatable="false">辺C</string>
    <string name="editor_parent" translatable="false">親</string>
    <string name="editor_setuzoku" translatable="false">接</string>
    <string name="editor_syozoku" translatable="false">親</string>
    <string name="editor_form" translatable="false">形</string>
    <string name="editor_koujyo">控除</string>
    <string name="credit">http://trianglelist.home.blog</string>

    <string name="rosen1">路線1</string>
    <string name="savecurrent">現在の図形を保存しますか？</string>
    <string name="inputcname">工事名を入力できます（空白可）</string>
    <string name="inputdname">路線名を入力できます（空白可）</string>
    <string name="inputdnum">図面番号を入力できます</string>
    <string name="inputaname">施工者名を入力できます（空白可）</string>
    <string name="space">半角スペースで改行します。</string>
    <string name="hintInputTriNumber">三角形の開始番号を入力できます</string>


    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="zero">zero</string>
    <string name="b">B</string>
    <string name="first">1</string>
    <string name="second">2</string>
    <string name="rosenname">路線名</string>

    <string name="hello_first_fragment">三角形の辺長ＡＢＣを入力</string>
    <string name="hello_second_fragment">select a form to connection. Arg: %1$s</string>
    <string name="title" translatable="false">title</string>

    <string-array name="TriNumList">
        <item>1</item>
    </string-array>

    <string-array name="EditModeList">
        <item>辺B</item>
        <item>延長L</item>
    </string-array>

    <string-array name="DeductionFormList">
        <item>-</item>
        <item>Box</item>
        <item>Circle</item>
    </string-array>

    <string-array name="ParentList">
        <item>-</item>
        <item>B</item>
        <item>C</item>
        <item>BR</item>
        <item>BL</item>
        <item>CR</item>
        <item>CL</item>
        <item>BC</item>
        <item>CC</item>
        <item>BF</item>
        <item>CF</item>
    </string-array>
    <string name="action_privacy">個人情報保護方針</string>
    <string name="action_save_xlsx">Xlsx出力</string>
    <string name="rotate_to_left" translatable="false">Rotate Left</string>
    <string name="rotate_to_right" translatable="false">Rotate Right</string>
    <string name="test_run_basic_senario" translatable="false">Test run basic senario</string>
    <string name="reset_view" translatable="false">Reset View</string>
    <string name="list_to_up" translatable="false">List Up</string>
    <string name="list_to_down" translatable="false">List Down</string>
    <string name="fill_color" translatable="false">"Change Color "</string>
    <string name="show_xlsx" translatable="false">View Xlsx</string>
    <string name="increase_text_size" translatable="false">Increase Text Size</string>
    <string name="decrease_text_size" translatable="false">Decrease Text Size</string>
    <string name="show_debug_string" translatable="false">Show Debug Strings</string>
    <string name="view_pdf" translatable="false">View PDF</string>
    <string name="share_pdf_to" translatable="false">Share PDF</string>
    <string name="send_email_to" translatable="false">Gmail</string>
    <string name="connect_to_b_length_in_parent" translatable="false">Connect to length B</string>
    <string name="connect_to_c_length_in_parent" translatable="false">Connect to length C</string>
    <string name="rewrite_shape" translatable="false">Add or Rewrite</string>
    <string name="undo" translatable="false">Undo (one-time only)</string>
    <string name="flip_dimension_text_in_vertical" translatable="false">Flip Dim in Vertical</string>
    <string name="flip_dimension_text_in_horizontal" translatable="false">Flip Dim in Horizontal</string>
    <string name="flip_connect_point_in_horizontal" translatable="false">Slide Connection (in Different Lengthes)</string>
    <string name="flag_up_a_information_text" translatable="false">Flag Up the Info</string>
    <string name="change_deduction_mode" translatable="false">Change Edit Mode</string>
    <string name="delete_a_shape_tap_twice" translatable="false">Delete Last, when Tap Twice</string>
    <string name="trilist_number_reverse" translatable="false">List Reverse (Dedmode Only)</string>
    <string name="view_dxf" translatable="false">View DXF (need JW cad viewer)</string>
    <string name="share_files" translatable="false" >Share Files</string>
    <string name="rosenname_hint" translatable="false">input rosenname</string>
    <string name="editor_number" translatable="false">　</string>

    <string name="action_auto_arrange">寸法の自動配置</string>
    <string name="action_text_size_mm">寸法の紙面サイズ</string>

    <!-- かんたん操作ガイド・成功体験の誘導 -->
    <string name="action_quick_guide">操作ガイド</string>
    <string name="guide_initial_hint">💡 辺（BまたはC）をタップすると、次の三角形を追加できます</string>
    <string name="guide_connect_hint">辺%sに接続: BとCを入力し、緑の鉛筆(✎)で追加</string>
    <string name="guide_first_success">🎉 三角形が接続されました！この調子で続けて追加できます</string>
    <string name="guide_view_guide">使い方</string>
    <string name="quick_guide_title">ヘロンの三角形のかんたん使い方</string>
    <string name="quick_guide_message">【基本の3ステップ】\n\n1. 辺をタップ\n   親三角形の「B」または「C」の辺をタップして接続先を選択します。\n\n2. 寸法を入力\n   上部の表組みに辺長（B, C）を入力します。\n\n3. 鉛筆ボタンで追加\n   右上の緑の鉛筆ボタン（✎）をタップして三角形を接続します。\n\n【便利な操作】\n・辺をダブルタップ: 既存の三角形を再編集\n・右下の[控]ボタン: マンホール・桝の面積控除を追加\n・スワイプ/ピンチ: 画面の移動・拡大縮小</string>
    <string name="quick_guide_start">始める</string>
</resources>
